sandbox/output
HikerTest.java:42: error: method testUnknownLength() is already defined in class HikerTest
    public void testUnknownLength() {
                ^
1 error
